-- The name of the package.
name:                koshucode-baala-data

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.191.0.0

-- A short (one-line) description of the package.
synopsis:            A notational system for relational model

-- A longer description of the package.
description:         Koshucode is a notation for people and computers
                     who read, write, and calculate relational data.
                     This library provides functions for handling
                     koshucode on computers.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, 2015, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Data
        Koshucode.Baala.Data.Message

        Koshucode.Baala.Data.Church
        Koshucode.Baala.Data.Church.Build
        Koshucode.Baala.Data.Church.Cop
        Koshucode.Baala.Data.Church.Cox
        Koshucode.Baala.Data.Church.Message
        Koshucode.Baala.Data.Church.Run

        Koshucode.Baala.Data.Content

        Koshucode.Baala.Data.Decode
        Koshucode.Baala.Data.Decode.Content
        Koshucode.Baala.Data.Decode.Dataset
        Koshucode.Baala.Data.Decode.Message
        Koshucode.Baala.Data.Decode.Numeric
        Koshucode.Baala.Data.Decode.Term
        Koshucode.Baala.Data.Decode.Type

        Koshucode.Baala.Data.Class
        Koshucode.Baala.Data.Class.Complex
        Koshucode.Baala.Data.Class.Content
        Koshucode.Baala.Data.Class.Edge
        Koshucode.Baala.Data.Class.Encode
        Koshucode.Baala.Data.Class.Map
        Koshucode.Baala.Data.Class.Message
        Koshucode.Baala.Data.Class.Simple

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                      == 4.*
       , containers                == 0.5.*
       , text                      == 1.*
       , time                      == 1.*
       , koshucode-baala-overture  == 0.191.0.0
       , koshucode-baala-base      == 0.191.0.0
       , koshucode-baala-syntax    == 0.191.0.0
       , koshucode-baala-type      == 0.191.0.0

  ghc-options:         -Wall

