-- The name of the package.
name:                koshucode-baala-operator

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.61.0.0

-- A short (one-line) description of the package.
synopsis:            Relational operators in Koshucode

-- A longer description of the package.
description:         An impelemntation of relational operators.
                     Operators are used in the @koshu@ calculator
                     that is contained in the
                     @koshucode-baala-calculator@ package.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Op
        Koshucode.Baala.Op.Message
        Koshucode.Baala.Op.Quoter
        Koshucode.Baala.Op.Type

        Koshucode.Baala.Op.Builtin
        Koshucode.Baala.Op.Builtin.Get
        Koshucode.Baala.Op.Builtin.Rop
        Koshucode.Baala.Op.Builtin.Term

        Koshucode.Baala.Op.Content
        Koshucode.Baala.Op.Content.Arith
        Koshucode.Baala.Op.Content.Cops
        Koshucode.Baala.Op.Content.List
        Koshucode.Baala.Op.Content.Logic
        Koshucode.Baala.Op.Content.Order

        Koshucode.Baala.Op.Cox
        Koshucode.Baala.Op.Cox.Cox
        Koshucode.Baala.Op.Cox.Rop

        Koshucode.Baala.Op.Minimal
        Koshucode.Baala.Op.Minimal.Origin
        Koshucode.Baala.Op.Minimal.Restrict
        Koshucode.Baala.Op.Minimal.Rop
        Koshucode.Baala.Op.Minimal.Term
        Koshucode.Baala.Op.Minimal.Tropashko

        Koshucode.Baala.Op.Nest
        Koshucode.Baala.Op.Nest.Flow
        Koshucode.Baala.Op.Nest.Confl
        Koshucode.Baala.Op.Nest.Rop

        Koshucode.Baala.Op.Meta
        Koshucode.Baala.Op.Meta.Meta
        Koshucode.Baala.Op.Meta.Rop

        Koshucode.Baala.Op.Vanilla
        Koshucode.Baala.Op.Vanilla.Check
        Koshucode.Baala.Op.Vanilla.Confl
        Koshucode.Baala.Op.Vanilla.Flow
        Koshucode.Baala.Op.Vanilla.Naming
        Koshucode.Baala.Op.Vanilla.Order
        Koshucode.Baala.Op.Vanilla.Rop

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                  == 4.6.*
       , containers            == 0.5.*
       , koshucode-baala-base  == 0.61.*
       , koshucode-baala-core  == 0.61.*

