-- The name of the package.
name:                koshucode-baala-operator

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.77.0.0

-- A short (one-line) description of the package.
synopsis:            Relation-mapping operators in Koshucode

-- A longer description of the package.
description:         An impelemntation of relation-mapping operators.
                     Operators are used in the @koshu@ calculator
                     that is contained in the
                     @koshucode-baala-calculator@ package.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Op
        Koshucode.Baala.Op.Message

        Koshucode.Baala.Op.Builtin
        Koshucode.Baala.Op.Builtin.Define
        Koshucode.Baala.Op.Builtin.Get
        Koshucode.Baala.Op.Builtin.Rop
        Koshucode.Baala.Op.Builtin.Term

        Koshucode.Baala.Op.Check
        Koshucode.Baala.Op.Control
        Koshucode.Baala.Op.DepRank
        Koshucode.Baala.Op.Gadget

        Koshucode.Baala.Op.Lattice
        Koshucode.Baala.Op.Lattice.Restrict
        Koshucode.Baala.Op.Lattice.Rop
        Koshucode.Baala.Op.Lattice.Tropashko

        Koshucode.Baala.Op.Meta

        Koshucode.Baala.Op.Nest
        Koshucode.Baala.Op.Nest.Confl
        Koshucode.Baala.Op.Nest.Deriv
        Koshucode.Baala.Op.Nest.Flow
        Koshucode.Baala.Op.Nest.Rop

        Koshucode.Baala.Op.Peripheral
        Koshucode.Baala.Op.Source
        Koshucode.Baala.Op.Term

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                  == 4.*
       , containers            == 0.5.*
       , koshucode-baala-base  == 0.77.*
       , koshucode-baala-core  == 0.77.*

