-- The name of the package.
name:                koshucode-baala-overture

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.169.0.0

-- A short (one-line) description of the package.
synopsis:            Preliminary library for Koshucode

-- A longer description of the package.
description:         Preliminary library for Koshucode.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2016, SEINO Katsuhiro

category:            Prelude

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Overture
        Koshucode.Baala.Overture.Fn
        Koshucode.Baala.Overture.Name.IntString
        Koshucode.Baala.Overture.Name.String
        Koshucode.Baala.Overture.Name.Text

        Koshucode.Baala.Overture.Text
        Koshucode.Baala.Overture.Text.Category
        Koshucode.Baala.Overture.Text.Integer
        Koshucode.Baala.Overture.Text.Unicode
        Koshucode.Baala.Overture.Text.Utility

        Koshucode.Baala.Overture.Type

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                  == 4.*
       , containers            == 0.*
       , text                  == 1.*

  ghc-options:         -Wall

