-- The name of the package.
name:                koshucode-baala-rop-cox

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.214.0.0

-- A short (one-line) description of the package.
synopsis:            Relation-mapping operators with content calculations

-- A longer description of the package.
description:         An impelemntation of relation-mapping operators
                     that use term-content calculations.
                     These operators are used in the @koshu@ calculator
                     that is contained in the
                     @koshucode-baala-calculator@ package.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Rop.Cox
        Koshucode.Baala.Rop.Cox.Calc
        Koshucode.Baala.Rop.Cox.Empty
        Koshucode.Baala.Rop.Cox.Filter
        Koshucode.Baala.Rop.Cox.Gadget
        Koshucode.Baala.Rop.Cox.GeoDatumJp
        Koshucode.Baala.Rop.Cox.Range
        Koshucode.Baala.Rop.Cox.Rops

        Koshucode.Baala.Rop.Cox.Type.Clock
        Koshucode.Baala.Rop.Cox.Type.Dec
        Koshucode.Baala.Rop.Cox.Type.Text
        Koshucode.Baala.Rop.Cox.Type.Time

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                        == 4.*
       , koshucode-baala-data-plus   == 0.214.0.0
       , koshucode-baala-core        == 0.214.0.0
       , koshucode-baala-rop         == 0.214.0.0
       , koshucode-baala-rop-flat    == 0.214.0.0

