-- The name of the package.
name:                koshucode-baala-rop-flat

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.162.0.0

-- A short (one-line) description of the package.
synopsis:            Relation-mapping operators in Koshucode

-- A longer description of the package.
description:         An impelemntation of relation-mapping operators.
                     Operators are used in the @koshu@ calculator
                     that is contained in the
                     @koshucode-baala-calculator@ package.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Rop.Base
        Koshucode.Baala.Rop.Base.Define
        Koshucode.Baala.Rop.Base.Get
        Koshucode.Baala.Rop.Base.Message
        Koshucode.Baala.Rop.Base.Rop
        Koshucode.Baala.Rop.Base.Term

        Koshucode.Baala.Rop.Flat
        Koshucode.Baala.Rop.Flat.Bundle
        Koshucode.Baala.Rop.Flat.Check
        Koshucode.Baala.Rop.Flat.Control
        Koshucode.Baala.Rop.Flat.Elem
        Koshucode.Baala.Rop.Flat.Gadget

        Koshucode.Baala.Rop.Flat.Lattice
        Koshucode.Baala.Rop.Flat.Lattice.Restrict
        Koshucode.Baala.Rop.Flat.Lattice.Rop
        Koshucode.Baala.Rop.Flat.Lattice.Tropashko

        Koshucode.Baala.Rop.Flat.Message
        Koshucode.Baala.Rop.Flat.Meta
        Koshucode.Baala.Rop.Flat.Order
        Koshucode.Baala.Rop.Flat.Peripheral
        Koshucode.Baala.Rop.Flat.PoScale
        Koshucode.Baala.Rop.Flat.Resource
        Koshucode.Baala.Rop.Flat.Source
        Koshucode.Baala.Rop.Flat.Subtext
        Koshucode.Baala.Rop.Flat.Term
        Koshucode.Baala.Rop.Flat.TermGadget

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                     == 4.*
       , containers               == 0.5.*
       , koshucode-baala-overture == 0.162.0.0
       , koshucode-baala-base     == 0.162.0.0
       , koshucode-baala-syntax   == 0.162.0.0
       , koshucode-baala-data     == 0.162.0.0
       , koshucode-baala-core     == 0.162.0.0
       , koshucode-baala-subtext  == 0.162.0.0

