-- The name of the package.
name:                koshucode-baala-subtext

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.192.0.0

-- A short (one-line) description of the package.
synopsis:            A text matching library

-- A longer description of the package.
description:         Subtext provides text matching functionality
                     with sequential, alternative, and repetitive expressions.
                     It collects submatches and
                     switch matching expression among multiple expressions.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2016, SEINO Katsuhiro

category:            Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Subtext
        Koshucode.Baala.Subtext.Bundle
        Koshucode.Baala.Subtext.Expr
        Koshucode.Baala.Subtext.Match
        Koshucode.Baala.Subtext.MinMax

        Koshucode.Baala.Subtext.Operator
        Koshucode.Baala.Subtext.Operator.Basic
        Koshucode.Baala.Subtext.Operator.Char
        Koshucode.Baala.Subtext.Operator.Combine
        Koshucode.Baala.Subtext.Operator.Repeat

        Koshucode.Baala.Subtext.Para

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                      == 4.*
       , containers                == 0.*
       , text                      == 1.*
       , koshucode-baala-overture  == 0.192.0.0

  ghc-options:         -Wall

