-- The name of the package.
name:                koshucode-baala-toolkit

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.23.0.0

-- A short (one-line) description of the package.
synopsis:            Toolkit for Koshucode

-- A longer description of the package.
description:         Toolkit for handling koshucode data.
                     This package contains executables
                     except for @koshu@ command.
                     Please check package @koshucode-baala-calculator@
                     for @koshu@ command.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

executable koshu-change
  main-is:
        koshu-change.hs
  other-modules:
        Koshucode.Baala.Toolkit.Main.KoshuChange
  build-depends:
         base                       == 4.5.*
       , containers                 == 0.4.*
       , koshucode-baala-base       == 0.23.*
       , koshucode-baala-operator   == 0.23.*
       , koshucode-baala-calculator == 0.23.*

executable koshu-rdf
  main-is:
        koshu-rdf.hs
  other-modules:
        Koshucode.Baala.Toolkit.Main.KoshuRdfMain
  build-depends:
         base                       == 4.5.*
       , rdf4h                      == 1.1.*
       , text                       == 0.11.*
       , koshucode-baala-base       == 0.23.*
       , koshucode-baala-operator   == 0.23.*
       , koshucode-baala-calculator == 0.23.*

executable koshu-syntax
  main-is:
        koshu-syntax.hs
  other-modules:
        Koshucode.Baala.Toolkit.Main.KoshuSyntax
  build-depends:
         base                       == 4.5.*
       , koshucode-baala-base       == 0.23.*
       , koshucode-baala-operator   == 0.23.*
       , koshucode-baala-calculator == 0.23.*


library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Toolkit.Main.KoshuChange
        Koshucode.Baala.Toolkit.Main.KoshuRdfMain
        Koshucode.Baala.Toolkit.Main.KoshuSyntax
        Koshucode.Baala.Toolkit.Library.RDF

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                       == 4.5.*
       , containers                 == 0.4.*
       , rdf4h                      == 1.1.*
       , text                       == 0.11.*
       , koshucode-baala-base       == 0.23.*
       , koshucode-baala-operator   == 0.23.*
       , koshucode-baala-calculator == 0.23.*

